- Update prefabs - Update Scenes - Add HeroController Input Listener

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ SnakeRPG/.idea/.idea.SnakeRPG/.idea/indexLayout.xml
 SnakeRPG/.idea/.idea.SnakeRPG/.idea/modules.xml
 SnakeRPG/.idea/.idea.SnakeRPG/.idea/projectSettingsUpdater.xml
 SnakeRPG/.idea/.idea.SnakeRPG/.idea/vcs.xml
+SnakeRPG/Temp/
